fixed: scrollbar color

--- a/src/components/TodoForm/index.css
+++ b/src/components/TodoForm/index.css
@@ -21,9 +21,7 @@ label {
 
 textarea {
   resize: none;
-  background-color: #f9fbfc;
   border: 2px solid #202329;
-  border-radius: 2px;
   box-shadow: 0px 5px 50px rgba(32, 35, 41, 0.25);
   color: #1e1e1f;
   font-size: 20px;
