--- a/src/index.css
+++ b/src/index.css
@@ -16,19 +16,32 @@ html {
 
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 1em;
+  -webkit-appearance: none;
+}
+
+*::-webkit-scrollbar {
+  width: 0.5em;
 }
 
 *::-webkit-scrollbar-track {
-  background: grey;
+  background: black;
+}
+
+textarea::-webkit-scrollbar-track {
+  background: white;
+  visibility: hidden;
+}
+
+textarea::-webkit-scrollbar-thumb {
+  background-color: rgb(255, 255, 255);}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgb(0, 0, 0);
+  border-radius: 20px;
+  border: 3px solid transparent;
+
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: rgb(107, 237, 211);
-  border-radius: 20px;
-  border: 3px solid grey;
-
-}
-*::-webkit-scrollbar {
-  -webkit-appearance: none;
+  visibility: hidden;
 }
